--- a/commands.tex
+++ b/commands.tex
@@ -1,7 +1,21 @@
 \renewcommand{\mathbf}{\bm}
 \newcommand*{\tran}{{\mkern-1.5mu\mathsf{T}}}
 
+\newcommand{\Ind}{\mathcal{I}}
+\newcommand{\fspace}{\mathcal{F}}
+\newcommand{\hpspace}{\Lambda}
 \newcommand{\D}{\mathcal{D}}
+\newcommand{\xv}{\mathbf{x}}
+\newcommand{\yv}{\mathbf{x}}
+\renewcommand{\xi}[1][i]{\xv^{(#1)}}
+\newcommand{\yi}[1][i]{y^{(#1)}}
+\newcommand{\Dset}{\{(\xi, \yi)\ |\ i = 1, \dots, n\}}
+\newcommand{\Xspace}{\mathcal{X}}
+\newcommand{\Yspace}{\mathcal{Y}}
+\newcommand{\R}{\mathbb{R}}
+\newcommand{\yhat}{\hat{y}}
+\newcommand{\hp}{\bm{\lambda}}
+
 \newcommand{\fh}{\hat{f}}
 \newcommand{\fmh}[1][m]{\fh^{[#1]}}
 \newcommand{\fmdh}{\fh^{[m-1]}}
@@ -11,13 +25,10 @@
 \newcommand{\tbh}{\hat{\bm{\theta}}}
 \newcommand{\tbmh}{\hat{\bm{\theta}}^{[m]}}
 \newcommand{\tbih}[1][i]{\tbh^{(#1)}}
-\newcommand{\xv}{\bm{x}}
 \newcommand{\pr}{r}
 \newcommand{\prv}{\bm{r}}
 \newcommand{\rmi}{\pr^{[m](i)}}
 \newcommand{\pd}[2]{\frac{\partial #1}{\partial #2}}
-\renewcommand{\xi}[1][i]{\xv^{(#1)}}
-\newcommand{\yi}[1][i]{y^{(#1)}}
 \newcommand{\Lxyi}{L(\yi, f(\xi))}
 \newcommand{\design}{\bm{Z}}
 \newcommand{\sse}{\operatorname{SSE}}
